Issue #998: Fix broken layout of versioning toggle in shared space

--- a/app/styles/pages/common/_common-sidebar-right.scss
+++ b/app/styles/pages/common/_common-sidebar-right.scss
@@ -512,6 +512,9 @@ md-content #content-ctn-sidebar {
       display: flex;
       flex: 0 0 45%;
     }
+    > .full-width-list-item {
+      flex: 1;
+    }
   }
 }
 
